apply a max-width to images so that they do not escape from column_paragraph on mobile devices and such, only in the 2015 template, avoid setting max width if the image is inside a table layout which probably has its own width

--- a/resources/gato-template-txstate2015/css/_maincontent.scss
+++ b/resources/gato-template-txstate2015/css/_maincontent.scss
@@ -29,6 +29,8 @@
 
 .column_paragraph {
   margin: 0px 0px 4rem 0px;
+  img { max-width: 100%; }
+  table img { max-width: none; }
 }
 
 .trail {
